new proj/src/objects/GE_ES_Role__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PRM_Approver_Type__c</fullName>
        <description>Used for PRM Approver Type</description>
        <inlineHelpText>Used for PRM Approver Type Only</inlineHelpText>
        <label>PRM Approver Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Low Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Significant Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renew Low Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renew Significant Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Role_Type__c</fullName>
        <label>PRM Role Type</label>
        <picklist>
            <picklistValues>
                <fullName>P&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;L - Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PRM Role</description>
        <inlineHelpText>Is this a PRM Role ?</inlineHelpText>
        <label>PRM Role</label>
        <type>Checkbox</type>
    </fields>
    <label>ES Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ES Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ES Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>